--- a/src/compare/compare.css
+++ b/src/compare/compare.css
@@ -3,6 +3,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    position: fixed;
     min-height: 100vh;
     overflow: hidden;
     display: block;
